# SahayakAI

./: README.md  api_client_example.py  app.py  pyproject.toml  test_computer_use_agent.py  voice_api.py  voice_interface.py
backend/: .gitignore  mp4_mp3.py  pyproject.toml  voice_api.py  voice_interface.py
backend/computer_use_agent/: README.md  agent.py
backend/computer_use_demo/gui_agent/planner/: anthropic_agent.py
computer_use_agent/: agent.py
computer_use_demo/: loop.py
computer_use_demo/gui_agent/planner/: anthropic_agent.py
computer_use_demo/tools/: bash.py  computer.py
frontend/: index.html
